--- a/src/AkApp/appsettings.json
+++ b/src/AkApp/appsettings.json
@@ -7,8 +7,8 @@
   },
   "AllowedHosts": "*",
   "GkPosSettings": {
-    "ShopApiUrl": "https://localhost:1219/Orders/GetOrders",
-    "ShopName": "Anh Khoi Shop 1",
-    "ShopId": "S1"
+    "BaseApiUrl": "http://localhost:8090/",
+    "StoreName": "Anh Khoi Shop 1",
+    "StoreNumber": "S01"
   }
 }
