--- a/src/GkPosApp/Dockerfile
+++ b/src/GkPosApp/Dockerfile
@@ -1,9 +1,10 @@
 #See https://aka.ms/customizecontainer to learn how to customize your debug container and how Visual Studio uses this Dockerfile to build your images for faster debugging.
+#https://www.textcontrol.com/blog/2023/09/23/deploying-an-aspnet-core-web-app-with-docker/
 
 FROM mcr.microsoft.com/dotnet/aspnet:7.0 AS base
 WORKDIR /app
-EXPOSE 8091
-EXPOSE 8445
+EXPOSE 8091	#http port. The ports number should be between 8000 and 9000
+EXPOSE 8445 #https port
 
 FROM mcr.microsoft.com/dotnet/sdk:7.0 AS build
 WORKDIR /src
